--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.25",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
